[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "asreview-simulation"
version = "0.1.0-alpha0"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "click ~= 8.0",
    "asreview == 1.*"
]
description = "Simulate a manual ASReview analysis"

[project.optional-dependencies]
linting = ["pre-commit"]
doc2vec = ['gensim']
sbert = ['sentence_transformers']
tensorflow = ['tensorflow~=2.0']
testing = ["pytest"]

[project.scripts]
asreview-simulation = "asreview_simulation.cli:cli"

[project.entry-points."asreview.entry_points"]
simulation = "asreview_simulation.cli:SimulationEntryPoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
force_alphabetical_sort_within_sections = true
force_single_line = true
line_length = 120
lines_after_imports = 2
lines_between_sections = 0
src_paths = ["src", "tests"]
