[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "asreview-cli-plugin-extractor"
version = "0.1.0-alpha0"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "click"
]

[project.entry-points."asreview_cli.extractors"]
new = "asreview_cli_plugin_extractor:new_extractor_cmd"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
