[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "asreview-cli"
version = "0.1.0-alpha0"
readme = "README.md"
requires-python = ">=3.7"

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
asreview-cli = "cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
