[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "asreview-simulation"
version = "0.1.0-alpha0"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "click ~= 8.0",
    "asreviewlib == 0.1.0-alpha0"
]

[project.optional-dependencies]
testing = ["pytest"]

[project.scripts]
asreview-simulation = "asreview_simulation:cli"

[project.entry-points."asreview.entry_points"]
simulation = "asreview_simulation.entrypoint:SimulationEntrypoint"

[tool.setuptools.packages.find]
where = ["src"]
