[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "asreview"
version = "0.1.0-alpha0"
readme = "README.md"
requires-python = ">=3.7"

[project.scripts]
asreview = "asreview:cli"

[project.optional-dependencies]
testing = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
