[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "asreview-lab"
version = "0.1.0-alpha0"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "click ~= 8.0",
    "asreviewlib == 0.1.0-alpha0"
]

[project.optional-dependencies]
testing = ["pytest"]

[project.scripts]
asreview-lab = "asreview_lab:cli"

[project.entry-points."asreview.subcommands"]
lab = "asreview_lab.subcommands:LabSubcommand"

[tool.setuptools.packages.find]
where = ["src"]
